--- a/bestbuyfec/src/index.css
+++ b/bestbuyfec/src/index.css
@@ -1,5 +1,8 @@
 body {
-  margin: 0;
+  /* margin: 0; */
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -10,4 +13,20 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+#reviews{
+  display: flex;
+  justify-content: center;
+}
+
+#overview{
+  display: flex;
+  justify-content: center;
+}
+
+#footer{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
