--- a/bestbuyfec/src/App.css
+++ b/bestbuyfec/src/App.css
@@ -1,4 +1,54 @@
+html{
+  display: flex;
+  justify-content: center;
+}
+
 .App {
   display: flex;
   flex-direction: column;
 }
+
+.Collapsible{
+  border-top: 1px solid lightgray;
+  margin-left: 90px;
+  margin-right: 90px;
+  min-width: 1050px;
+  padding-top: 20px;
+  padding-bottom: 20px;
+}
+
+/* .Collapsible span{
+  padding-top: 25px;
+  padding-right: 1150px;
+} */
+
+/* .Collapsible svg{
+  padding-top: 10px;
+  padding-bottom: 20px;
+}
+
+.Collapsible svg:hover{
+  cursor: pointer;
+}
+
+
+
+.Collapsible__contentInner{
+  max-height: fit-content;
+}
+
+.Collapsible__contentOuter{
+  padding-bottom: 20px;
+}
+
+.Collapsible__trigger{
+  font-size: 27px;
+  font-weight: bold;
+  font-family: Arial,Helvetica,sans-serif;
+  padding-bottom: 20px;
+  padding-right: 1150px;
+}
+
+.Collapsible__trigger:hover {
+  cursor: pointer;
+} */
