--- a/bestbuyfec/src/index.css
+++ b/bestbuyfec/src/index.css
@@ -15,6 +15,12 @@ code {
     monospace;
 }
 
+#header{
+  width: 100% !important;
+  /* display: flex;
+  flex: 1; */
+}
+
 #reviews{
   display: flex;
   justify-content: center;
@@ -28,5 +34,5 @@ code {
 #footer{
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  /* justify-content: center; */
 }
