all components rendering on page, adding final css styling

--- a/bestbuyfec/src/index.css
+++ b/bestbuyfec/src/index.css
@@ -14,11 +14,12 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+a{
+  color: #0457c8;
+}
 
 #header{
   width: 100% !important;
-  /* display: flex;
-  flex: 1; */
 }
 
 #reviews{
@@ -35,4 +36,26 @@ code {
   display: flex;
   flex-direction: column;
   /* justify-content: center; */
+}
+
+#Pricing-Cart-Gallery{
+  display: flex;
+  justify-content: center;
+}
+
+#alsoviewed{
+  display: flex;
+  justify-content: center;
+  margin-bottom: 120px;
+}
+
+#specifications{
+  display: flex;
+  justify-content: center;
+}
+
+#questions_answers{
+  display: flex;
+  justify-content: center;
+  margin-bottom: 50px;
 }
