--- a/bestbuyfec/src/App.css
+++ b/bestbuyfec/src/App.css
@@ -6,39 +6,46 @@ html{
 .App {
   display: flex;
   flex-direction: column;
+  justify-content: center;
 }
 
 .Collapsible{
   border-top: 1px solid lightgray;
-  margin-left: 90px;
-  margin-right: 90px;
+  margin-left: 25px;
+  margin-right: 25px;
+  width: 1300px;
   min-width: 1050px;
   padding-top: 20px;
   padding-bottom: 20px;
+  justify-content: space-evenly;
+  /* width: 1100px; */
 }
 
-/* .Collapsible span{
-  padding-top: 25px;
-  padding-right: 1150px;
-} */
+.Collapsible span{
+  /* padding-top: 25px;
+  padding-right: 1150px; */
+}
 
 /* .Collapsible svg{
   padding-top: 10px;
   padding-bottom: 20px;
-}
+} */
 
-.Collapsible svg:hover{
+/* .Collapsible svg:hover{
   cursor: pointer;
-}
+} */
 
 
 
 .Collapsible__contentInner{
+  /* display: flex;
+  justify-content: center;
   max-height: fit-content;
+  width: 1100px; */
 }
 
 .Collapsible__contentOuter{
-  padding-bottom: 20px;
+  /* padding-bottom: 20px; */
 }
 
 .Collapsible__trigger{
@@ -46,9 +53,8 @@ html{
   font-weight: bold;
   font-family: Arial,Helvetica,sans-serif;
   padding-bottom: 20px;
-  padding-right: 1150px;
 }
 
 .Collapsible__trigger:hover {
   cursor: pointer;
-} */
+}
